# SchrodingerEquationSimulation

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Math/: Complex.cpp  Complex.h  ComposedFunction.cpp  ComposedFunction.h  ConstantFunction.cpp  ConstantFunction.h  CosFunction.cpp  CosFunction.h  EquationSymbols.cpp  EquationSymbols.h  Function.cpp  Function.h  PolynomialFunction.cpp  PolynomialFunction.h  SineFunction.cpp  SineFunction.h  WaveFunction.cpp  WaveFunction.h
Rendering/: PotentialFunctionGraph.h  PropagationGraph.cpp  PropagationGraph.h  Renderer.cpp  Renderer.h
Simulation/: SchrodingerSolver.cpp  SchrodingerSolver.h  SimulationParameters.h  SimulationState.cpp  SimulationState.h
